Fix table overflow

--- a/css/main.css
+++ b/css/main.css
@@ -2745,7 +2745,7 @@
 
 	table {
 		margin: 0 0 2em 0;
-		width: 100%;
+		width: 750;
 		overflow: auto;
 	}
 
